android/testData/gradle/BadPlayServicesVersion.gradle
apply plugin: 'android'

dependencies {
    compile 'com.google.android.gms:play-services:4.4.+'
    compile <error descr="Version `5.2.08` should not be used; the app can not be published with this version. Use version `6.1.11` instead.">'com.google.android.gms:<caret>play-services:5.2.08'</error>
}